<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:fillViewport="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/thumbnail"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_alignParentTop="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/atomiun" />

                <TextView
                    android:id="@+id/title"
                    style="@style/titulo" />

                <TextView
                    android:id="@+id/pregunta"
                    style="@style/pregunta" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:visibility="visible">

                <RadioGroup
                    android:id="@+id/options"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/option1"
                        style="@style/radio_buttons"
                        android:text="@string/respuesta1_1" />

                    <RadioButton
                        android:id="@+id/option2"
                        style="@style/radio_buttons"
                        android:text="@string/respuesta2_1" />

                    <RadioButton
                        android:id="@+id/option3"
                        style="@style/radio_buttons"
                        android:paddingRight="8dp"
                        android:text="@string/respuesta3_1" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/checkboxes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:orientation="vertical"
                android:visibility="gone">

                <CheckBox
                    android:id="@+id/check1"
                    style="@style/chechboxes"
                    android:text="@string/respuesta1_4" />

                <CheckBox
                    android:id="@+id/check2"
                    style="@style/chechboxes"
                    android:text="@string/respuesta2_4" />

                <CheckBox
                    android:id="@+id/check3"
                    style="@style/chechboxes"
                    android:text="@string/respuesta3_4" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/respuestaTexto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">


                <EditText
                    android:id="@+id/answer"
                    style="@style/edit_text" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/siguiente"
                    style="@style/button" />

                <ProgressBar
                    android:id="@+id/firstBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp"
                    />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</android.support.v7.widget.CardView>
